<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:facemail="http://schemas.android.com/apk/res/com.facemail.mobile.android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
      <LinearLayout
                    style="@style/FacemailFillW"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
              android:orientation="horizontal">
         <TextView
                   style="@style/FacemailWrap"
                   android:text="@string/setting_loginname"/>

          <com.facemail.mobile.android.view.FaceEditText
                  android:hint="@string/et_setting_loginname_hint" android:paddingTop="5dip"
                  android:gravity="center_vertical"
                  android:paddingLeft="5dip" android:paddingRight="10dip"
                  android:layout_width="fill_parent" android:layout_marginLeft="5dip"
                  android:layout_marginTop="10dip" android:maxLines="1"
                  android:layout_marginRight="10dip" android:id="@+id/et_loginname_setting"
                  android:singleLine="true" android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:maxLength="200"
                  facemail:img_background_hover="@drawable/arrow2" android:imeOptions="actionNext"
                  facemail:img_background_default="@drawable/arrow1"
                  />
          <TextView android:id="@+id/user_account_id" style="@style/FacemailWrap" android:visibility="gone" android:text=""/>
      </LinearLayout>
    <LinearLayout style="@style/FacemailFillW"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">
        <TextView style="@style/FacemailWrap"
                  android:text="@string/setting_loginpwd"/>
        <EditText android:id="@+id/et_loginpwd_setting"
                    style="@style/FacemailWrap"
                    android:layout_marginLeft="20dp"
                    android:password="true"
                    android:maxLines="1"
                    android:hint="@string/setting_loginpwd_hint"
                    android:focusable="true"
                    android:layout_marginRight="10dip"
                    android:layout_width="fill_parent"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true" android:maxLength="200"
                />
    </LinearLayout>
    <LinearLayout style="@style/FacemailFillW"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">
        <TextView style="@style/FacemailWrap"
                  android:text="@string/setting_loginsmtp"/>
        <EditText   android:id="@+id/et_loginsmtp_setting"
                    style="@style/FacemailWrap"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/setting_loginsmtp_hint"/>
        <TextView style="@style/FacemailWrap"
                  android:text="@string/setting_loginsmtpPort"
                  android:layout_marginLeft="5dp"
                />
        <EditText   android:id="@+id/et_loginsmtpPort_setting"
                    style="@style/FacemailWrap"
                    android:layout_marginLeft="2dp"
                    android:text="25"/>
    </LinearLayout>

    <LinearLayout style="@style/FacemailFillW"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal">
        <TextView style="@style/FacemailWrap"
                  android:text="@string/setting_loginpop3"/>
        <EditText   android:id="@+id/et_loginpop3_setting"
                    style="@style/FacemailWrap"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/setting_loginpop3_hint"/>
        <TextView style="@style/FacemailWrap"
                  android:text="@string/setting_loginpop3Port"
                  android:layout_marginLeft="5dp"
                />
        <EditText   android:id="@+id/et_loginpop3Port_setting"
                    style="@style/FacemailWrap"
                    android:layout_marginLeft="2dp"
                    android:text="110"/>
    </LinearLayout>
    <LinearLayout style="@style/FacemailFillW"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal"
            >
         <Button android:id="@+id/saveAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/setting_account"/>
        <Button android:id="@+id/CancelAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_cancel"/>
    </LinearLayout>

</LinearLayout>