<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mlist"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_deep" >

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="fill_parent"
        android:background="@color/bg_color_deep"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <ImageView
                android:id="@+id/head_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/head_default" />

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/head_view"
                android:text="NAME"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/grade_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name_textview"
                android:layout_below="@+id/name_textview"
                android:text="bigdog"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_write_email_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_write_email_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_myemail_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_myemail_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_myemail_send_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_myemail_send_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>
        <TextView
            android:id="@+id/tv_email_draft_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_email_draft_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_email_important_star_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_email_important_star_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_email_recyclebin_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_email_recyclebin_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/tv_email_setting_left_menu"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_email_setting_left_menu"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="2px"
            layout="@layout/line" >
        </include>

        <TextView
            android:id="@+id/v1_0_0_left_menu_addaccount_tv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/left_menu_settings"
            android:textColor="@color/text_color"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>