<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/centerbg">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5sp"
                  android:orientation="horizontal">
            <TextView style="@style/FacemailWrap"
                      android:text="@string/mail_message_detail_from"/>
            <TextView style="@style/FacemailWrap" android:paddingLeft="2sp"
                      android:id="@+id/mail_message_from" android:text="294356967@qq.com" android:visibility="gone"/>
        </LinearLayout>
         <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/face_mail_divider" />
        <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5sp"
                  android:orientation="horizontal">
            <TextView style="@style/FacemailWrap"
                      android:text="@string/mail_message_detail_to"/>
            <TextView style="@style/FacemailWrap" android:paddingLeft="2sp"
                      android:id="@+id/mail_message_to" android:text="294356967@qq.com" android:visibility="gone"/>
        </LinearLayout>
         <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/face_mail_divider" />
        <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5sp"
                  android:orientation="horizontal"
                  android:id="@+id/mail_message_cc_layout"
                  android:visibility="gone">
            <TextView style="@style/FacemailWrap"
                      android:text="@string/mail_message_detail_to_cc"/>
            <TextView style="@style/FacemailWrap" android:paddingLeft="2sp"
                      android:id="@+id/mail_message_cc" android:text="294356967@qq.com"/>
            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/face_mail_divider" />
        </LinearLayout>


          <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5sp">
         <WebView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/mail_message_content_detail"/>
          </ScrollView>
     </LinearLayout>
</RelativeLayout>